Add: document API
